add window data

--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -632,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1079,6 +1079,70 @@
    ],
    "source": [
     "zts_norm1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# subset data for different train/test windows\n",
+    "zts = pd.read_csv('~/capp30254_fight_potatoes/data processing/zts_all_date_processed.csv')\n",
+    "bio = pd.read_csv('~/capp30254_fight_potatoes/data processing/bio_all_date_processed.csv')\n",
+    "# convert report date to pd datetime\n",
+    "zts['Report Date'] = pd.to_datetime(zts['Report Date'])\n",
+    "bio['Report Date'] = pd.to_datetime(bio['Report Date'])\n",
+    "date = zts['Report Date']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# subset data for different train/test windows\n",
+    "all_windows = [[['2020-03-02', '2020-12-31'], ['2021-01-01', '2021-06-30']],[['2020-06-01', '2021-03-31'],['2021-03-01','2021-09-30']],\n",
+    "      [['2020-09-01', '2021-06-30'],['2021-07-01','2021-12-31']], [['2021-01-01', '2021-09-30'],['2021-10-01','2021-04-24']], [['2021-03-01', '2021-12-31'],['2021-01-01','2021-04-24']]]\n",
+    "stock = [zts, bio]\n",
+    "stock_str = ['zts', 'bio']\n",
+    "\n",
+    "\n",
+    "for i, tic in enumerate(stock):\n",
+    "    group = 0\n",
+    "    for wd in all_windows:\n",
+    "        train_wd, test_wd = wd\n",
+    "        train_start, train_end = train_wd\n",
+    "        test_start, test_end = test_wd\n",
+    "        \n",
+    "        # process (subjectivity pct change)/normalize data\n",
+    "        df = tic\n",
+    "        df['s_diff'] = df['tweet_subjectivity'].pct_change()\n",
+    "        X = df.iloc[:, 3:]\n",
+    "        t_norm = normalize(X)\n",
+    "        # get Y_price\n",
+    "        typ = df[['Stock price']]\n",
+    "\n",
+    "        # save training data\n",
+    "        typ_train = window(train_start, train_end, typ, date)\n",
+    "        Y_dummy_train = pd.DataFrame(tic, columns = ['Y_boolean'])\n",
+    "        tyb_train = window(train_start, train_end, Y_dummy_train, date)\n",
+    "        X_train = window(train_start, train_end, t_norm, date)\n",
+    "        df_train = pd.merge(typ_train, tyb_train)\n",
+    "        df_train = pd.merge(df_train,X_train)\n",
+    "        df_train.to_csv(f'~/capp30254_fight_potatoes/data processing/window_data/{stock_str[i]}_train_group{group}_{train_start}_{train_end}.csv')\n",
+    "        \n",
+    "        # save testing data\n",
+    "        typ_test = window(test_start, test_end, typ, date)\n",
+    "        Y_dummy_test = pd.DataFrame(tic, columns = ['Y_boolean'])\n",
+    "        tyb_test = window(test_start, test_end, Y_dummy_test, date)\n",
+    "        X_test = window(test_start, test_end, t_norm, date)\n",
+    "        df_test = pd.merge(typ_test, tyb_test)\n",
+    "        df_test = pd.merge(df_test,X_test)\n",
+    "        df_test.to_csv(f'~/capp30254_fight_potatoes/data processing/window_data/{stock_str[i]}_test_group{group}_{test_start}_{test_end}.csv')\n",
+    "        \n",
+    "        group += 1  "
    ]
   }
  ],
