--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -200,22 +200,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
     "# feature normalization\n",
-    "def normalize(X):\n",
+    "def normalize(X_train, X_test):\n",
     "    '''\n",
     "    Normalize features using sklearn\n",
     "    '''\n",
-    "    #norm = MinMaxScaler().fit(X)\n",
-    "    #X_norm = norm.transform(X)\n",
-    "    scaler = MinMaxScaler()\n",
-    "    X_norm = scaler.fit_transform(X)\n",
+    "    norm = MinMaxScaler().fit(X_train)\n",
+    "    X_train_norm = norm.transform(X_train)\n",
+    "    X_test_norm = norm.transform(X_test)\n",
+    "    #scaler = MinMaxScaler()\n",
+    "    #X_norm = scaler.fit_transform(X)\n",
     "    # make into pd df\n",
-    "    X_norm = pd.DataFrame(X_norm, columns = X.columns)\n",
-    "    return X_norm"
+    "    X_train_norm = pd.DataFrame(X_train_norm, columns = X.columns)\n",
+    "    X_test_norm = pd.DataFrame(X_test_norm, columns = X.columns)\n",
+    "    return X_train_norm, X_test_norm"
    ]
   },
   {
@@ -1098,16 +1100,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
     "# subset data for different train/test windows\n",
-    "all_windows = [[['2020-03-02', '2020-12-31'], ['2021-01-01', '2021-06-30']],[['2020-06-01', '2021-03-31'],['2021-03-01','2021-09-30']],\n",
-    "      [['2020-09-01', '2021-06-30'],['2021-07-01','2021-12-31']], [['2021-01-01', '2021-09-30'],['2021-10-01','2021-04-24']], [['2021-03-01', '2021-12-31'],['2021-01-01','2021-04-24']]]\n",
+    "all_windows = [[['2020-03-02', '2020-12-31'], ['2021-01-01', '2021-06-30']],[['2020-06-01', '2021-03-31'],['2021-04-01','2021-09-30']],\n",
+    "      [['2020-09-01', '2021-06-30'],['2021-07-01','2021-12-31']], [['2021-01-01', '2021-09-30'],['2021-10-01','2022-04-24']], [['2021-03-01', '2021-12-31'],['2022-01-01','2022-04-24']]]\n",
     "stock = [zts, bio]\n",
     "stock_str = ['zts', 'bio']\n",
-    "\n",
+    "cols = zts.columns\n",
     "\n",
     "for i, tic in enumerate(stock):\n",
     "    group = 0\n",
@@ -1116,30 +1118,38 @@
     "        train_start, train_end = train_wd\n",
     "        test_start, test_end = test_wd\n",
     "        \n",
-    "        # process (subjectivity pct change)/normalize data\n",
+    "        # process (subjectivity pct change)\n",
     "        df = tic\n",
     "        df['s_diff'] = df['tweet_subjectivity'].pct_change()\n",
     "        X = df.iloc[:, 3:]\n",
-    "        t_norm = normalize(X)\n",
+    "        #t_norm = normalize(X)\n",
     "        # get Y_price\n",
     "        typ = df[['Stock price']]\n",
     "\n",
     "        # save training data\n",
     "        typ_train = window(train_start, train_end, typ, date)\n",
+    "        \n",
     "        Y_dummy_train = pd.DataFrame(tic, columns = ['Y_boolean'])\n",
     "        tyb_train = window(train_start, train_end, Y_dummy_train, date)\n",
-    "        X_train = window(train_start, train_end, t_norm, date)\n",
+    "        X_train = window(train_start, train_end, X, date)\n",
+    "        X_test = window(test_start, test_end, X, date)\n",
+    "        # normalize data\n",
+    "        X_train_norm, X_test_norm = normalize(X_train.iloc[:, 1:], X_test.iloc[:, 1:])\n",
     "        df_train = pd.merge(typ_train, tyb_train)\n",
-    "        df_train = pd.merge(df_train,X_train)\n",
+    "        #df_train = pd.merge(df_train,X_train_norm)\n",
+    "        df_train = pd.concat([df_train, X_train_norm], ignore_index=True, axis = 1)\n",
+    "        df_train.columns = cols\n",
     "        df_train.to_csv(f'~/capp30254_fight_potatoes/data processing/window_data/{stock_str[i]}_train_group{group}_{train_start}_{train_end}.csv')\n",
     "        \n",
     "        # save testing data\n",
     "        typ_test = window(test_start, test_end, typ, date)\n",
     "        Y_dummy_test = pd.DataFrame(tic, columns = ['Y_boolean'])\n",
     "        tyb_test = window(test_start, test_end, Y_dummy_test, date)\n",
-    "        X_test = window(test_start, test_end, t_norm, date)\n",
+    "        #X_test = window(test_start, test_end, t_norm, date)\n",
     "        df_test = pd.merge(typ_test, tyb_test)\n",
-    "        df_test = pd.merge(df_test,X_test)\n",
+    "        #df_test = pd.merge(df_test,X_train_norm)\n",
+    "        df_test = pd.concat([df_test, X_test_norm], ignore_index=True, axis = 1)\n",
+    "        df_test.columns = cols\n",
     "        df_test.to_csv(f'~/capp30254_fight_potatoes/data processing/window_data/{stock_str[i]}_test_group{group}_{test_start}_{test_end}.csv')\n",
     "        \n",
     "        group += 1  "
