--- a/phase2/phase2_modeling.ipynb
+++ b/phase2/phase2_modeling.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -55,7 +55,7 @@
        " 20)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -251,7 +251,7 @@
     "        max_val_x = results[2][results[1].index(max_val_y)]\n",
     "        ax.set_ylabel(ylab, fontsize=12)\n",
     "        fig.suptitle(f'{models[model]} for {plt_name}')\n",
-    "        ax.annotate(f'max accuracy: {round(max_val_y, 3)}', xy = (max_val_x, max_val_y), arrowprops=dict(facecolor='black'),)\n",
+    "        ax.annotate(f'max accuracy: ({max_val_x}, {round(max_val_y, 3)})', xy = (max_val_x, max_val_y), arrowprops=dict(facecolor='black'),)\n",
     "        fig.savefig(f'/Users/carolynliu/capp30254_fight_potatoes/phase2/plots/{model}_{plt_name}.png', dpi=fig.dpi, bbox_inches='tight')\n",
     "        plt.close(fig)\n",
     "    return name"
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,6 +315,13 @@
     "for i, (name, model_name), in enumerate(names.items()):\n",
     "    plot_prices(name, df_names[i], model_name, results)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
