--- a/phase1/progress_report.ipynb
+++ b/phase1/progress_report.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/bq/y6jssnk56235t8wjc47m1fdw0000gn/T/ipykernel_72187/1076450576.py:2: SettingWithCopyWarning: \n",
+      "/var/folders/bq/y6jssnk56235t8wjc47m1fdw0000gn/T/ipykernel_42314/1076450576.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -122,7 +122,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/bq/y6jssnk56235t8wjc47m1fdw0000gn/T/ipykernel_72187/2988129769.py:2: SettingWithCopyWarning: \n",
+      "/var/folders/bq/y6jssnk56235t8wjc47m1fdw0000gn/T/ipykernel_42314/2988129769.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -164,13 +164,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/bq/y6jssnk56235t8wjc47m1fdw0000gn/T/ipykernel_72187/703275229.py:7: SettingWithCopyWarning: \n",
+      "/var/folders/bq/y6jssnk56235t8wjc47m1fdw0000gn/T/ipykernel_42314/703275229.py:7: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  jnj_test['diff'] = jnj_test['Stock price'].diff()\n",
-      "/var/folders/bq/y6jssnk56235t8wjc47m1fdw0000gn/T/ipykernel_72187/703275229.py:17: SettingWithCopyWarning: \n",
+      "/var/folders/bq/y6jssnk56235t8wjc47m1fdw0000gn/T/ipykernel_42314/703275229.py:17: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -200,6 +200,26 @@
     "Y_abt_true_price = abt_test['Stock price']\n",
     "Y_abt_true = np.where(abt_test['diff'] >= 0, 1, 0)\n",
     "abt_test = abt_test[np.intersect1d(abt_test.columns, abt_lst)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((114, 12), (114,))"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "jnj_test.shape, Y_jnj_true.shape"
    ]
   },
   {
@@ -362,28 +382,6 @@
     "print(\"MSE: \", mse)\n",
     "print(\"RMSE: \", mse**(1/2.0))\n",
     "print(\"Score: \", sgdc_a.score(jnj_test, Y_jnj_true))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{\"request_info\": {\"success\": true}, \"account_info\": {\"api_key\": \"B7E2BDF287584687916193E57AFAC278\", \"name\": \"jeff grogger\", \"email\": \"jgrogger@gmail.com\", \"plan\": \"Starter\", \"credits_used\": 10105, \"credits_remaining\": 0, \"credits_reset_at\": \"2022-06-04T22:58:31.000Z\", \"credits_limit\": 10000, \"zipcodes_used\": 0, \"zipcodes_limit\": 1, \"zipcodes_available\": 1, \"account_balance_usd\": 0, \"account_balance_message\": \"Your Account Balance is used to pay any Overage charges (to avoid multiple small transactions being made to your payment card). You can top up your Account Balance on the Account page of the Dashboard. Your Account Balance is not used for your monthly Plan payment.\", \"destinations_used\": 0, \"destinations_limit\": 50, \"destinations_available\": 50, \"overage_allowed\": true, \"overage_enabled\": true, \"overage_limit\": 20000, \"overage_used\": 105, \"collections_used\": 0, \"collections_limit\": 10000, \"collections_available\": 10000, \"usage_history\": [{\"month\": \"May\", \"year\": 2022, \"month_number\": 5, \"is_current_month\": true, \"credits_total_for_month\": 10103, \"credits_total_per_day\": {\"1\": 0, \"2\": 0, \"3\": 0, \"4\": 4, \"5\": 0, \"6\": 0, \"7\": 0, \"8\": 0, \"9\": 0, \"10\": 0, \"11\": 0, \"12\": 0, \"13\": 4502, \"14\": 2453, \"15\": 0, \"16\": 0, \"17\": 460, \"18\": 2684, \"19\": 0, \"20\": 0, \"21\": 0, \"22\": 0, \"23\": 0, \"24\": 0, \"25\": 0, \"26\": 0, \"27\": 0, \"28\": 0, \"29\": 0, \"30\": 0, \"31\": 0}}, {\"month\": \"April\", \"year\": 2022, \"month_number\": 4, \"is_current_month\": false, \"credits_total_for_month\": 0, \"credits_total_per_day\": {\"1\": 0, \"2\": 0, \"3\": 0, \"4\": 0, \"5\": 0, \"6\": 0, \"7\": 0, \"8\": 0, \"9\": 0, \"10\": 0, \"11\": 0, \"12\": 0, \"13\": 0, \"14\": 0, \"15\": 0, \"16\": 0, \"17\": 0, \"18\": 0, \"19\": 0, \"20\": 0, \"21\": 0, \"22\": 0, \"23\": 0, \"24\": 0, \"25\": 0, \"26\": 0, \"27\": 0, \"28\": 0, \"29\": 0, \"30\": 0}}, {\"month\": \"March\", \"year\": 2022, \"month_number\": 3, \"is_current_month\": false, \"credits_total_for_month\": 0, \"credits_total_per_day\": {\"1\": 0, \"2\": 0, \"3\": 0, \"4\": 0, \"5\": 0, \"6\": 0, \"7\": 0, \"8\": 0, \"9\": 0, \"10\": 0, \"11\": 0, \"12\": 0, \"13\": 0, \"14\": 0, \"15\": 0, \"16\": 0, \"17\": 0, \"18\": 0, \"19\": 0, \"20\": 0, \"21\": 0, \"22\": 0, \"23\": 0, \"24\": 0, \"25\": 0, \"26\": 0, \"27\": 0, \"28\": 0, \"29\": 0, \"30\": 0, \"31\": 0}}, {\"month\": \"February\", \"year\": 2022, \"month_number\": 2, \"is_current_month\": false, \"credits_total_for_month\": 0, \"credits_total_per_day\": {\"1\": 0, \"2\": 0, \"3\": 0, \"4\": 0, \"5\": 0, \"6\": 0, \"7\": 0, \"8\": 0, \"9\": 0, \"10\": 0, \"11\": 0, \"12\": 0, \"13\": 0, \"14\": 0, \"15\": 0, \"16\": 0, \"17\": 0, \"18\": 0, \"19\": 0, \"20\": 0, \"21\": 0, \"22\": 0, \"23\": 0, \"24\": 0, \"25\": 0, \"26\": 0, \"27\": 0, \"28\": 0}}], \"status\": [{\"component\": \"Search Requests\", \"description\": \"Status of Rainforest 'type=search' requests\", \"group\": \"Parsing\", \"status\": \"operational\"}, {\"component\": \"Product Requests\", \"description\": \"Status of Rainforest 'type=product' requests\", \"group\": \"Parsing\", \"status\": \"operational\"}, {\"component\": \"Offers Requests\", \"description\": \"Status of Rainforest 'type=offers' requests\", \"group\": \"Parsing\", \"status\": \"operational\"}, {\"component\": \"Stock Estimation Requests\", \"description\": \"Status of Rainforest 'type=stock_estimation' requests\", \"group\": \"Parsing\", \"status\": \"operational\"}, {\"component\": \"Reviews Requests\", \"description\": \"Status of Rainforest 'type=reviews' requests\", \"group\": \"Parsing\", \"status\": \"operational\"}, {\"component\": \"Bestsellers Requests\", \"description\": \"Status of Rainforest 'type=bestsellers' requests\", \"group\": \"Parsing\", \"status\": \"operational\"}, {\"component\": \"Questions Requests\", \"description\": \"Status of Rainforest 'type=questions' requests\", \"group\": \"Parsing\", \"status\": \"operational\"}, {\"component\": \"Category Requests\", \"description\": \"Status of Rainforest 'type=category' requests\", \"group\": \"Parsing\", \"status\": \"operational\"}, {\"component\": \"Also Bought Requests\", \"description\": \"Status of Rainforest 'type=also_bought' requests\", \"group\": \"Parsing\", \"status\": \"operational\"}, {\"component\": \"Seller Profile Requests\", \"description\": \"Status of Rainforest 'type=seller_profile' requests\", \"group\": \"Parsing\", \"status\": \"operational\"}, {\"component\": \"Deals Requests\", \"description\": \"Status of Rainforest 'type=deals' requests\", \"group\": \"Parsing\", \"status\": \"operational\"}, {\"component\": \"Autocomplete Requests\", \"description\": \"Status of Rainforest 'type=autocomplete' requests\", \"group\": \"Parsing\", \"status\": \"operational\"}, {\"component\": \"Author Page Requests\", \"description\": \"Status of Rainforest 'type=author_page' requests\", \"group\": \"Parsing\", \"status\": \"operational\"}]}}\n"
-     ]
-    }
-   ],
-   "source": [
-    "import requests, json\n",
-    "params = {\n",
-    "  'api_key': 'B7E2BDF287584687916193E57AFAC278'\n",
-    "}\n",
-    "api_result = requests.get('https://api.rainforestapi.com/account', params)\n",
-    "print(json.dumps(api_result.json()))"
    ]
   }
  ],
