--- a/phase3_feature_selection.ipynb
+++ b/phase3_feature_selection.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "749bce6a",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "732c97c7",
    "metadata": {},
    "outputs": [],
@@ -34,12 +34,31 @@
     "ZTS = pd.read_csv(\"phase3_data/zts.csv\")\n",
     "BIO = BIO.loc[:, 'Report Date': 's_diff']\n",
     "ZTS = ZTS.loc[:, 'Report Date': 's_diff']\n",
-    "date = ZTS['Report Date']"
+    "dates = ZTS['Report Date']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
+   "id": "b74be028",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "datetime.datetime(2022, 2, 22, 0, 0)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "b8f99d80",
    "metadata": {},
    "outputs": [],
@@ -66,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "822bd196",
    "metadata": {},
    "outputs": [],
@@ -110,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "c2c97e69",
    "metadata": {},
    "outputs": [],
@@ -154,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "02c3a67f",
    "metadata": {},
    "outputs": [],
@@ -180,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "b76f72bd",
    "metadata": {},
    "outputs": [],
@@ -197,10 +216,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "ec4392b5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'datetime.datetime' object has no attribute 'between'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m/Users/carolynliu/capp30254_fight_potatoes/phase3_feature_selection.ipynb Cell 8'\u001b[0m in \u001b[0;36m<cell line: 3>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/carolynliu/capp30254_fight_potatoes/phase3_feature_selection.ipynb#ch0000007?line=13'>14</a>\u001b[0m test_date_start \u001b[39m=\u001b[39m \u001b[39mstr\u001b[39m(test_date_start)[:\u001b[39m10\u001b[39m]\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/carolynliu/capp30254_fight_potatoes/phase3_feature_selection.ipynb#ch0000007?line=14'>15</a>\u001b[0m test_date_end \u001b[39m=\u001b[39m \u001b[39mstr\u001b[39m(test_date_end)[:\u001b[39m10\u001b[39m]\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/carolynliu/capp30254_fight_potatoes/phase3_feature_selection.ipynb#ch0000007?line=16'>17</a>\u001b[0m train_data \u001b[39m=\u001b[39m window(train_date_start, train_date_end, BIO, date)\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/carolynliu/capp30254_fight_potatoes/phase3_feature_selection.ipynb#ch0000007?line=17'>18</a>\u001b[0m validate_data \u001b[39m=\u001b[39m window(validate_date_start, validate_date_end, BIO, date)\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/carolynliu/capp30254_fight_potatoes/phase3_feature_selection.ipynb#ch0000007?line=18'>19</a>\u001b[0m test_data \u001b[39m=\u001b[39m window(test_date_start, test_date_end, BIO, date)\n",
+      "\u001b[1;32m/Users/carolynliu/capp30254_fight_potatoes/phase3_feature_selection.ipynb Cell 3'\u001b[0m in \u001b[0;36mwindow\u001b[0;34m(start, end, df, date)\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/carolynliu/capp30254_fight_potatoes/phase3_feature_selection.ipynb#ch0000002?line=1'>2</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mwindow\u001b[39m(start, end, df, date):\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/carolynliu/capp30254_fight_potatoes/phase3_feature_selection.ipynb#ch0000002?line=2'>3</a>\u001b[0m     \u001b[39m'''\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/carolynliu/capp30254_fight_potatoes/phase3_feature_selection.ipynb#ch0000002?line=3'>4</a>\u001b[0m \u001b[39m    Given a start and end date, return df with data only\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/carolynliu/capp30254_fight_potatoes/phase3_feature_selection.ipynb#ch0000002?line=4'>5</a>\u001b[0m \u001b[39m    from that period\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/carolynliu/capp30254_fight_potatoes/phase3_feature_selection.ipynb#ch0000002?line=12'>13</a>\u001b[0m \u001b[39m    Returns: pd dataframe\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/carolynliu/capp30254_fight_potatoes/phase3_feature_selection.ipynb#ch0000002?line=13'>14</a>\u001b[0m \u001b[39m    '''\u001b[39;00m\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/carolynliu/capp30254_fight_potatoes/phase3_feature_selection.ipynb#ch0000002?line=14'>15</a>\u001b[0m     date \u001b[39m=\u001b[39m date[date\u001b[39m.\u001b[39;49mbetween(start, end, inclusive\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mboth\u001b[39m\u001b[39m'\u001b[39m)]\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/carolynliu/capp30254_fight_potatoes/phase3_feature_selection.ipynb#ch0000002?line=15'>16</a>\u001b[0m     \u001b[39m# concat dates and dataframe\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/carolynliu/capp30254_fight_potatoes/phase3_feature_selection.ipynb#ch0000002?line=16'>17</a>\u001b[0m     df \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39mconcat([date, df], axis \u001b[39m=\u001b[39m \u001b[39m1\u001b[39m, join\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39minner\u001b[39m\u001b[39m\"\u001b[39m)\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'datetime.datetime' object has no attribute 'between'"
+     ]
+    }
+   ],
    "source": [
     "# currently using BIO as example\n",
     "# loop for feature selection and modeling\n",
@@ -244,8 +276,11 @@
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "b0fa6594d8f4cbf19f97940f81e996739fb7646882a419484c72d19e05852a7e"
+  },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.9.12 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -259,7 +294,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
